<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/material_deep_teal_200">

        <LinearLayout
            android:id="@+id/row_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/customer_name"
                android:layout_weight="2.1"
                style="@style/sales_header_rows_txt"
                android:text="@string/names"
                />
            <TextView
                android:id="@+id/total_blocks"
                style="@style/sales_header_rows_txt"
                android:layout_weight="1.3"
                android:text="@string/total_blocks" />

            <TextView
                android:id="@+id/ice_amount"
                style="@style/sales_header_rows_txt"
                android:layout_weight="1.3"
                android:text="@string/ice" />

            <TextView
                android:id="@+id/labour_cost"
                style="@style/sales_header_rows_txt"
                android:layout_weight="1.4"
                android:padding="0dp"
                android:text="@string/labour_charges" />

            <TextView
                android:id="@+id/total_amount"
                style="@style/sales_header_rows_txt"
                android:layout_weight="1.3"
                android:text="@string/total_amount"/>

            <TextView
                android:id="@+id/paid_amount"
                style="@style/sales_header_rows_txt"
                android:layout_weight="1.3"
                android:text="@string/paid_amount"/>

            <TextView
                android:id="@+id/due_amount"
                style="@style/sales_header_rows_txt"
                android:layout_weight="1.3"
                android:text="@string/due_amount" />

        </LinearLayout>

    </LinearLayout>