<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/row_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:orientation="horizontal">

        <!--<TextView
            android:id="@+id/date"
            style="@style/sales_rows_txt"
            android:layout_weight="1"
            android:text="@string/s_no" />-->

        <LinearLayout
            android:id="@+id/sortBy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="2.2"
            android:background="@drawable/background_rectangle"
            android:gravity="center|left"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <TextView
                android:id="@+id/customer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/names"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/blocks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="left"
                android:textSize="6sp"
                android:text="@string/_5_5_5"
                android:visibility="invisible"
                android:textColor="@android:color/holo_blue_dark" />
        </LinearLayout>

        <TextView
            android:id="@+id/total_blocks"
            style="@style/sales_rows_txt"
            android:layout_weight="1.3"
            android:text="@string/total_blocks" />

        <TextView
            android:id="@+id/ice_amount"
            style="@style/sales_rows_txt"
            android:layout_weight="1.3"
            android:text="@string/ice_amount_header" />

        <TextView
            android:id="@+id/labour_cost"
            style="@style/sales_rows_txt"
            android:layout_weight="1.3"
            android:text="@string/labour_charges" />

        <TextView
            android:id="@+id/total_amount"
            style="@style/sales_rows_txt"
            android:layout_weight="1.3"
            android:text="@string/total_amount" />

        <TextView
            android:id="@+id/paid_amount"
            style="@style/sales_rows_txt"
            android:layout_weight="1.3"
            android:text="@string/paid_amount" />

        <TextView
            android:id="@+id/due_amount"
            style="@style/sales_rows_txt"
            android:layout_weight="1.3"
            android:text="@string/due_amount" />

    </LinearLayout>

</LinearLayout>